--- a/flow-python/examples/cat_finder/camera_gpu.toml
+++ b/flow-python/examples/cat_finder/camera_gpu.toml
@@ -10,40 +10,42 @@ tsize = 640
 path = "models/cat_finder_models/yolox_s.mge"
 interval = 5
 visualize = 1
-device = "cpu"
+device = "gpu"
 device_id = 0
 
-
+[[nodes]]
+name = "reid_video"
+ty = "ReIDVideo"
+path = "models/cat_finder_models/resnet50.mge"
+device = "gpu"
+device_id = 0
 
 [[nodes]]
 name = "redis_proxy"
-ty = "RedisProxyDEBUG"
+ty = "RedisProxy"
 ip = "127.0.0.1"
 port = "6379"
 mode = "search"
 prefix = "feature."
 
 
-[[nodes]]
-name = "reid_video"
-ty = "ReIDVideoINV"
-path = "models/cat_finder_models/resnet50.mge"
-device = "cpu"
-device_id = 1
-
-
-
 [[graphs]]
 name = "subgraph"
 inputs = [{ name = "inp", cap = 16, ports = ["det:inp"] }]
-outputs = [{ name = "out", cap = 16, ports = ["display:out"] }]
+outputs = [{ name = "out", cap = 16, ports = ["redis_proxy:out"] }]
 connections = [
+#   # default
+#   { cap = 16, ports = ["det:out", "track:inp"] },
+#   { cap = 16, ports = ["track:out", "shaper:inp"] },
+#   { cap = 16, ports = ["shaper:out", "reid_video:inp"] },
+#   { cap = 16, ports = ["reid_video:out", "redis_proxy:inp"] },
+
   # Custom
   { cap = 16, ports = ["det:out", "track:inp"] },
-  { cap = 16, ports = ["track:out", "shaper:inp"] },
+  { cap = 16, ports = ["track:out", "display:inp"] },
+  { cap = 16, ports = ["display:out", "shaper:inp"] },
   { cap = 16, ports = ["shaper:out", "reid_video:inp"] },
   { cap = 16, ports = ["reid_video:out", "redis_proxy:inp"] },
-  { cap = 16, ports = ["redis_proxy:out", "display:inp"] },
 ]
 
     [[graphs.nodes]]
@@ -53,7 +55,7 @@ connections = [
 
     [[graphs.nodes]]
     name = "track"
-    ty = "TrackDEBUG"
+    ty = "Track"
 
     [[graphs.nodes]]
     name = "shaper"
