--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ flow-python/examples/megflow-app
 flow-python/examples/run_with_plugins
 flow-python/megflow/megflow_quickstart_inner
 flow-python/megflow/megflow_run_inner
+
+.idea
