--- a/flow-python/examples/cat_feeders/cat_feeder_cpu.toml
+++ b/flow-python/examples/cat_feeders/cat_feeder_cpu.toml
@@ -13,8 +13,6 @@ visualize = 0
 device = "cpu"
 device_id = 0
 
-
-
 [[nodes]]
 name = "redis_proxy"
 ty = "RedisSearch"
@@ -22,7 +20,7 @@ ip = "127.0.0.1"
 port = "6379"
 mode = "search"
 prefix = "feature."
-
+log = 0
 
 [[nodes]]
 name = "reid_video"
@@ -30,41 +28,67 @@ ty = "ReID"
 path = "models/cat_finder_models/resnet50.mge"
 device = "cpu"
 device_id = 1
+log = 0
 
+[[nodes]]
+name = "serial_port"
+ty = "SerialPort"
+port = "/dev/ttyACM0"
+baudrate = 115200
+timeout = 0.01
+log = 1
 
 
 [[graphs]]
 name = "subgraph"
-inputs = [{ name = "inp", cap = 16, ports = ["det:inp"] }]
+inputs = [{ name = "inp", cap = 16, ports = ["serial_port:inp"] }]
 outputs = [{ name = "out", cap = 16, ports = ["display:out"] }]
 connections = [
   # Custom
+  { cap = 16, ports = ["serial_port:out", "det:inp"] },
   { cap = 16, ports = ["det:out", "track:inp"] },
   { cap = 16, ports = ["track:out", "shaper:inp"] },
   { cap = 16, ports = ["shaper:out", "reid_video:inp"] },
   { cap = 16, ports = ["reid_video:out", "redis_proxy:inp"] },
   { cap = 16, ports = ["redis_proxy:out", "name:inp"] },
-  { cap = 16, ports = ["name:out", "display:inp"] },
+  { cap = 16, ports = ["name:out", "feeder:inp"] },
+  { cap = 16, ports = ["feeder:out", "display:inp"] },
 ]
 
     [[graphs.nodes]]
     name = "track"
     ty = "Track"
+    log = 0
 
     [[graphs.nodes]]
     name = "shaper"
     ty = "Shaper"
     mode = "BEST"
+    log = 0
 
     [[graphs.nodes]]
     name = "name"
     ty = "Name"
+    log = 0
 
     [[graphs.nodes]]
     name = "display"
     ty = "Display"
     show_img = 1
+    log = 0
 
+    [[graphs.nodes]]
+    name = "feeder"
+    ty = "Feeder"
+    ip = "127.0.0.1"
+    port = "6379"
+    preset_time = 0
+    cat_wait_time = 5
+    amount_dt = 20
+    times_dt = 5
+    amount_ts = 30
+    times_ts = 5
+    log = 0
 
 [[graphs]]
 name = "cat_finder_camera"
